src/main/metadata/objects/Persona__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combination_of_Market_and_Functionality__c</fullName>
        <description>To remove duplicate combination of functionality and market . Used in workflow field update.</description>
        <externalId>true</externalId>
        <label>Combination of Market and Functionality</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Functionality_Access__c</fullName>
        <label>Functionality Access</label>
        <referenceTo>Functionality_Access_Master__c</referenceTo>
        <relationshipName>Market_Access_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <formula>Functionality_Access__r.Module_Name__c + "-" +  Functionality_Access__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functionality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Access__c</fullName>
        <label>Market Access</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>Market_Access_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Market_Access__r.Market_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonaName__c</fullName>
        <label>Persona Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>ProfileId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <label>Profiles</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Persona</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Market__c</columns>
        <columns>PersonaName__c</columns>
        <columns>Functionality__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAJ-{0000}</displayFormat>
        <label>Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>